--- a/www/assets/json/tasks/kitchen_tasks.json
+++ b/www/assets/json/tasks/kitchen_tasks.json
@@ -79,7 +79,7 @@
 			"audio": "wav/boil_egg.wav",
 			"items": [
 				{
-					"item": "vatten",
+					"item": "vatten_1",
 					"category": "",
 					"order": 1,
 					"optional": false
@@ -99,7 +99,7 @@
 				{
 					"item": "aggkopp",
 					"category": "",
-					"order": 0,
+					"order": 3,
 					"optional": true
 				}
 			]
@@ -111,7 +111,7 @@
 			"audio": "wav/make_tea.wav",
 			"items": [
 				{
-					"item": "vatten",
+					"item": "vatten_1",
 					"category": "",
 					"order": 1,
 					"optional": false
@@ -169,7 +169,7 @@
 				{
 					"item": "",
 					"category": "drinkable",
-					"order": 0,
+					"order": 1,
 					"optional": true
 				}
 			]
@@ -201,13 +201,13 @@
 				{
 					"item": "smor",
 					"category": "",
-					"order": 0,
+					"order": 3,
 					"optional": true
 				},
 				{
 					"item": "",
 					"category": "plate",
-					"order": 0,
+					"order": 4,
 					"optional": false
 				},
 				{
@@ -237,7 +237,7 @@
 					"optional": false
 				},
 				{
-					"item": "vatten",
+					"item": "vatten_1",
 					"category": "",
 					"order": 3,
 					"optional": false
@@ -313,7 +313,7 @@
 					"optional": false
 				},
 				{
-					"item": "vatten",
+					"item": "vatten_1",
 					"category": "",
 					"order": 1,
 					"optional": false
@@ -327,7 +327,7 @@
 				{
 					"item": "",
 					"category": "topping",
-					"order": 4,
+					"order": 3,
 					"optional": true
 				}
 			]
@@ -365,7 +365,7 @@
 			"audio": "wav/make_spagetti.wav",
 			"items": [
 				{
-					"item": "vatten",
+					"item": "vatten_1",
 					"category": "",
 					"order": 1,
 					"optional": false
@@ -385,13 +385,13 @@
 				{
 					"item": "",
 					"category": "plate",
-					"order": 0,
+					"order": 2,
 					"optional": true
 				},
 				{
 					"item": "",
 					"category": "cutlery",
-					"order": 0,
+					"order": 2,
 					"optional": true
 				},
 				{
@@ -620,7 +620,7 @@
 			"audio": "wav/fika_with_tea.wav",
 			"items": [
 				{
-					"item": "vatten",
+					"item": "vatten_1",
 					"category": "",
 					"order": 1,
 					"optional": false
@@ -690,7 +690,7 @@
 				{
 					"item": "",
 					"category": "frying_fat",
-					"order": 0,
+					"order": 1,
 					"optional": true
 				},
 				{
@@ -919,7 +919,7 @@
 					"optional": false
 				},
 				{
-					"item": "vatten",
+					"item": "vatten_1",
 					"category": "",
 					"order": 1,
 					"optional": false
