Fixed sending data to Server and fixed minor things
Former-commit-id: 69cdeb18c0980d34b9bd2e8f7fd530ed21ed9345

--- a/www/assets/json/tasks/bathroom_tasks.json
+++ b/www/assets/json/tasks/bathroom_tasks.json
@@ -303,7 +303,7 @@
             "id": 13,
             "name": "",
             "difficulty": 0,
-            "audio": "wav/get_tandborsten.wav",
+            "audio": "wav/get_toothbrush.wav",
             "items": [
                 {
                     "item": "tandborste",
