added spagetti to kitchen tasks
Former-commit-id: bd9409dad4bfebc8af9b68d0af9dbc1b5022294c

--- a/www/assets/json/tasks/kitchen_tasks.json
+++ b/www/assets/json/tasks/kitchen_tasks.json
@@ -171,6 +171,12 @@
 					"category": "drinkable",
 					"order": 1,
 					"optional": true
+				},
+				{
+					"item": "spagetti",
+					"category": "",
+					"order": 1,
+					"optional": true
 				}
 			]
 		},
